# BB-VPKI-Project

./: .gitignore  Cargo.toml  README.md  metrics.csv  metrics_detailed.csv
examples/: network_simulation.rs  single_vehicle.rs
scripts/: continuous_run.ps1  continuous_run.sh  generate_pdf.ps1  generate_pdf.sh
src/: lib.rs  main.rs
src/blockchain/: block.rs  chain.rs  mod.rs  transaction.rs
src/crypto/: hsm.rs  mod.rs  tpm.rs
src/edge/: mod.rs  node.rs
src/metrics/: mod.rs  performance.rs
src/network/: fabric.rs  gateway.rs  mod.rs  v2v.rs
src/pki/: ca.rs  certificate.rs  mod.rs
src/vehicle/: mod.rs  obu.rs  sdk.rs
tests/: integration_test.rs
