[package]
name = "bb-vpki"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
csv = "1.3"
async-trait = "0.1"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
